<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wayne Hills Now</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detailed_event">Event Details</string>
    <string name="title_activity_list_event">Event List</string>
    <string name="title_activity_calendar">Calendar </string>
    <string name="title_activity_card_list">Event List</string>
    <string name="endDate">\"End Date: \"</string>
    <string name="endDate1">End Date:</string>
    <string name="startDate">Start Date:</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="loc">Location:</string>
    <string name="desc">Description:</string>
    <string name="contact">Contact:</string>
    <string name="cal">Calendar</string>
    <string name="list">Event List</string>
    <string name="title_activity_google_plus_sign_in">GooglePlusSignIn</string>
    <string name="status_signed_out">Signed out</string>
    <string name="close">close</string>
    <string name="play_services_error">Play Services Error</string>
    <string name="signed_in">Signed in as  </string>
    <string name="status_signing_in">Signing in...</string>
    <string name="sign_out_button_name">Sign Out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="circles_title">Circles</string>
    <string name="gplus">Google Plus</string>
    <string name="people_attending">people are attending</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="num">11</string>
    <string name="title_activity_write_comment">WriteCommentActivity</string>
    <string name="title_activity_my_events">My Events</string>
    <string name="title_activity_image_upload">ImageUploadActivity</string>
    <string name="title_activity_live_at_hills">Live@Hills</string>
    <string name="title_activity_view_event_image">ViewEventImage</string>
    <string name="send_to">Share with...</string>

</resources>
