<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="1dp"
    android:layout_margin="3dp"
    card_view:cardElevation="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/frameLayout"
        android:layout_gravity="bottom"
        android:id="@+id/layout"
        android:weightSum="1"
        android:padding="1.5dp"
        android:background="#000000"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txtTitle"
            android:background="#660033"
            android:textColor="@android:color/primary_text_dark"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="330dp"
            android:id="@+id/frameLayout"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="[Location]"
                android:id="@+id/txtLocation"
                android:layout_gravity="left|top"
                android:layout_below="@+id/dispLoc"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="[Description]"
                android:id="@+id/txtDesc"
                android:layout_gravity="left|center_vertical"
                android:layout_below="@+id/dispDesc"
                android:layout_alignParentStart="true"
                android:layout_marginTop="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loc"
                android:id="@+id/dispLoc"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/desc"
                android:id="@+id/dispDesc"
                android:layout_gravity="left|center_vertical"
                android:layout_below="@+id/txtLocation"
                android:layout_alignParentStart="true"
                android:layout_marginTop="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/contact"
                android:id="@+id/dispContact"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/txtDesc"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="[ContactInfo]"
                android:id="@+id/txtContact"
                android:layout_alignBottom="@+id/dispContact"
                android:layout_toEndOf="@+id/dispLoc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:id="@+id/From"
                android:textColor="@android:color/primary_text_light"
                android:layout_below="@+id/dispContact"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[Start Date]"
                android:id="@+id/txtStartDate"
                android:textColor="@android:color/secondary_text_light"
                android:layout_marginLeft="10dp"
                android:layout_alignTop="@+id/From"
                android:layout_toEndOf="@+id/From" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:id="@+id/To"
                android:textColor="@android:color/primary_text_light"
                android:layout_below="@+id/txtStartDate"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[End Date]"
                android:id="@+id/txtEndDate"
                android:textColor="@android:color/secondary_text_light"
                android:layout_alignTop="@+id/To"
                android:layout_alignStart="@+id/txtStartDate" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Attend"
                android:id="@+id/attend_button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:id="@+id/cancel_button"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/txtContact" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Type"
            android:id="@+id/txtType"
            android:layout_alignBottom="@+id/txtTitle"
            android:layout_alignEnd="@+id/txtTitle"
            android:textColor="@android:color/primary_text_dark"/>


    </RelativeLayout>


</android.support.v7.widget.CardView>


<ListView
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/card_view"
    android:id="@android:id/list"
    android:layout_marginTop="30dp">
    </ListView>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:visibility="visible"
        android:layout_marginTop="42dp"
        android:layout_alignTop="@android:id/list"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/people_attending"
        android:id="@+id/textView4"
        android:layout_below="@+id/card_view"
        android:layout_centerHorizontal="true"
        android:background="#660033"
        android:textColor="@android:color/primary_text_dark" />


</RelativeLayout>



    <!--TODO add scrollable list of people attending event-->
